# text-rendering

./: .gitignore  CMakeLists.txt  README.md
asset/: font.json  font_unscaled.json
scripts/linux/: init
scripts/windows/: init.ps1
src/: CMakeLists.txt  font.cpp  font.h  label.h  main.cpp  text.cpp  text.h
